@@ -1,3 +1,7 @@
+2020-05-02  Tim Rühsen  <tim.ruehsen@gmx.de>
+
+	* src/pk-cmd.c (pk_cmd_exec): Fix params to strncmp.
+
 2020-05-02  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* lib/pkl-gen.c (pkl_gen_pr_func): Fix typo in comment.
